# UAV_UGV_Autonomous_Exploration

./: README.md
drone_controller/: CMakeLists.txt  package.xml
drone_controller/msg/: ColorEvaluationArray.msg
drone_controller/src/: color_evaluation.py  drone_control.py  limits_exploration.py  localization.py  main.py  utilities.py
drone_controller/srv/: ControlDrone.srv  EvaluateTargets.srv  JointTrees.srv  OgmLimits.srv
experiments/: CMakeLists.txt  package.xml
experiments/Gazebo_Worlds/: Space_1.world  Space_2.world  Space_3.world  Space_Small.world
experiments/Launch_Files/include/: ArPose_follower.launch.xml  drone.launch.xml  turtlebot.launch.xml
experiments/Launch_Files/turtlebot_drone/: both_exploration.launch  robots.launch
experiments/Launch_Files/turtlebot_only/: robot.launch  turtlebot_exploration.launch
experiments/Rviz_Files/: exploration_turtlebot_only.rviz  exploration_with_both.rviz
experiments/YAML_Files/: bottom_camera_param.yaml  exploration_turtlebot_only.yaml  exploration_with_both.yaml  slam_parameters.yaml
turtlebot_ar_marker /robots/: kobuki_hexagons_hokuyo_tag.urdf.xacro
turtlebot_ar_marker /urdf/: turtlebot_gazebo.urdf.xacro  turtlebot_library.urdf.xacro
turtlebot_controller/: CMakeLists.txt  package.xml
turtlebot_controller/script/: map_static_tf.py
turtlebot_controller/src/: Makefile  _cpp_functions.c  brushfires.py  cpp_functions.py  laser_data_aggregator.py  main.py  navigation.py  path_planning.py  robot_perception.py  sonar_data_aggregator.py  speeds_assignment.py  target_selection.py  topology.py  (+1 more)
(+28 files in other folders)
