<?xml version="1.0"?>
<package>
	<name>experiments</name>
	<version>0.9.1</version>
	<description>The Experiments Package</description>

	<author>Vasileios Tsouvalas</author>
	<maintainer email="v.tsouvalas@gmail.com">Vasileios Tsouvalas</maintainer>
	<license>AUTH</license>
	<url>http://...</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>visualization_msgs</run_depend>
	<run_depend>message_runtime</run_depend>



	<export></export>
</package>
